tests/algorithms/x/C/sorts/quick_sort_3_partition.c
// Generated by Mochi 0.10.32 on 2025-08-11 17:23 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t quick_sort_3partition_len;
size_t quick_sort_lomuto_partition_len;
size_t three_way_radix_quicksort_len;

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%d", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static size_t concat_len;
static long long* concat_long_long(long long *a, size_t a_len, const long long *b, size_t b_len) {
    long long *res = realloc(a, (a_len + b_len) * sizeof(long long));
    if (b_len > 0) memcpy(res + a_len, b, b_len * sizeof(long long));
    concat_len = a_len + b_len;
    return res;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long array1_init[7] = {5LL, -1LL, -1LL, 5LL, 5LL, 24LL, 0LL};
long long *array1 = array1_init;
size_t array1_len = 7;
long long array2_init[4] = {9LL, 0LL, 2LL, 6LL};
long long *array2 = array2_init;
size_t array2_len = 4;
long long *array3 = NULL;
size_t array3_len = 0;
long long nums1_init[5] = {0LL, 5LL, 3LL, 1LL, 2LL};
long long *nums1 = nums1_init;
size_t nums1_len = 5;
long long *nums2 = NULL;
size_t nums2_len = 0;
long long nums3_init[4] = {-2LL, 5LL, 0LL, -4LL};
long long *nums3 = nums3_init;
size_t nums3_len = 4;

long long * quick_sort_3partition(long long * arr, size_t arr_len, long long left, long long right);
long long * quick_sort_lomuto_partition(long long * arr, size_t arr_len, long long left, long long right);
long long lomuto_partition(long long * arr, size_t arr_len, long long left, long long right);
long long * three_way_radix_quicksort(long long * arr, size_t arr_len);
int main(void);

long long * quick_sort_3partition(long long * arr, size_t arr_len, long long left, long long right) {
    if (right <= left) {
        return quick_sort_3partition_len = arr_len, arr;
    }
    long long a = left;
    long long i = left;
    long long b = right;
    long long pivot = arr[(int)({long long _mochi_idx = left; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
    while (i <= b) {
        if (arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] < pivot) {
            long long temp = arr[(int)({long long _mochi_idx = a; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
            arr[(int)(a)] = arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
            arr[(int)(i)] = temp;
            a = a + 1LL;
            i = i + 1LL;
        } else {
            if (arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] > pivot) {
                long long temp = arr[(int)({long long _mochi_idx = b; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
                arr[(int)(b)] = arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
                arr[(int)(i)] = temp;
                b = b - 1LL;
            } else {
                i = i + 1LL;
            }
        }
    }
    arr = quick_sort_3partition(arr, arr_len, left, a - 1LL);
    arr_len = quick_sort_3partition_len;
    arr = quick_sort_3partition(arr, arr_len, b + 1LL, right);
    arr_len = quick_sort_3partition_len;
    return quick_sort_3partition_len = arr_len, arr;
}

long long * quick_sort_lomuto_partition(long long * arr, size_t arr_len, long long left, long long right) {
    if (left < right) {
        long long pivot_index = lomuto_partition(arr, arr_len, left, right);
        arr = quick_sort_lomuto_partition(arr, arr_len, left, pivot_index - 1LL);
        arr_len = quick_sort_lomuto_partition_len;
        arr = quick_sort_lomuto_partition(arr, arr_len, pivot_index + 1LL, right);
        arr_len = quick_sort_lomuto_partition_len;
    }
    return quick_sort_lomuto_partition_len = arr_len, arr;
}

long long lomuto_partition(long long * arr, size_t arr_len, long long left, long long right) {
    long long pivot = arr[(int)({long long _mochi_idx = right; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
    long long store_index = left;
    long long i = left;
    while (i < right) {
        if (arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] < pivot) {
            long long temp = arr[(int)({long long _mochi_idx = store_index; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
            arr[(int)(store_index)] = arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
            arr[(int)(i)] = temp;
            store_index = store_index + 1LL;
        }
        i = i + 1LL;
    }
    long long temp = arr[(int)({long long _mochi_idx = right; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
    arr[(int)(right)] = arr[(int)({long long _mochi_idx = store_index; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
    arr[(int)(store_index)] = temp;
    return store_index;
}

long long * three_way_radix_quicksort(long long * arr, size_t arr_len) {
    if (arr_len <= 1LL) {
        return three_way_radix_quicksort_len = arr_len, arr;
    }
    long long pivot = arr[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
    long long *less = NULL;
    size_t less_len = 0;
    long long *equal = NULL;
    size_t equal_len = 0;
    long long *greater = NULL;
    size_t greater_len = 0;
    long long i = 0LL;
    while (i < arr_len) {
        long long val = arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
        if (val < pivot) {
            less = list_append_long_long(less, &less_len, val);
        } else {
            if (val > pivot) {
                greater = list_append_long_long(greater, &greater_len, val);
            } else {
                equal = list_append_long_long(equal, &equal_len, val);
            }
        }
        i = i + 1LL;
    }
    long long *sorted_less = three_way_radix_quicksort(less, less_len);
    size_t sorted_less_len = three_way_radix_quicksort_len;
    long long *sorted_greater = three_way_radix_quicksort(greater, greater_len);
    size_t sorted_greater_len = three_way_radix_quicksort_len;
    long long result = concat_long_long(sorted_less, sorted_less_len, equal, equal_len);
    result = concat_long_long(result, result_len, sorted_greater, sorted_greater_len);
    return three_way_radix_quicksort_len = result_len, result;
}

int main(void) {
    {
        long long __start = _now();
        array1 = quick_sort_3partition(array1, array1_len, 0LL, array1_len - 1LL);
        array1_len = quick_sort_3partition_len;
        puts(str_list_int(array1, array1_len));
        array2 = quick_sort_3partition(array2, array2_len, 0LL, array2_len - 1LL);
        array2_len = quick_sort_3partition_len;
        puts(str_list_int(array2, array2_len));
        array3 = quick_sort_3partition(array3, array3_len, 0LL, array3_len - 1LL);
        array3_len = quick_sort_3partition_len;
        puts(str_list_int(array3, array3_len));
        nums1 = quick_sort_lomuto_partition(nums1, nums1_len, 0LL, nums1_len - 1LL);
        nums1_len = quick_sort_lomuto_partition_len;
        puts(str_list_int(nums1, nums1_len));
        nums2 = quick_sort_lomuto_partition(nums2, nums2_len, 0LL, nums2_len - 1LL);
        nums2_len = quick_sort_lomuto_partition_len;
        puts(str_list_int(nums2, nums2_len));
        nums3 = quick_sort_lomuto_partition(nums3, nums3_len, 0LL, nums3_len - 1LL);
        nums3_len = quick_sort_lomuto_partition_len;
        puts(str_list_int(nums3, nums3_len));
        puts(({long long *__tmp4 = three_way_radix_quicksort(NULL, 0); char *__res = str_list_int(__tmp4, three_way_radix_quicksort_len); __res;}));
        puts(({long long *__tmp5 = three_way_radix_quicksort(({long long *tmp = malloc(1 * sizeof(long long)); tmp[0] = 1LL; tmp;}), 1); char *__res = str_list_int(__tmp5, three_way_radix_quicksort_len); __res;}));
        puts(({long long *__tmp6 = three_way_radix_quicksort(({long long *tmp = malloc(6 * sizeof(long long)); tmp[0] = -5LL; tmp[1] = -2LL; tmp[2] = 1LL; tmp[3] = -2LL; tmp[4] = 0LL; tmp[5] = 1LL; tmp;}), 6); char *__res = str_list_int(__tmp6, three_way_radix_quicksort_len); __res;}));
        puts(({long long *__tmp7 = three_way_radix_quicksort(({long long *tmp = malloc(10 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 2LL; tmp[2] = 5LL; tmp[3] = 1LL; tmp[4] = 2LL; tmp[5] = 0LL; tmp[6] = 0LL; tmp[7] = 5LL; tmp[8] = 2LL; tmp[9] = -1LL; tmp;}), 10); char *__res = str_list_int(__tmp7, three_way_radix_quicksort_len); __res;}));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
